// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con imagen 1`] = `
<div
  className=" productCard  "
>
  <img
    alt="Product image"
    className="productImg "
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe de mostrar el componente sin imagen 1`] = `
<img
  alt="Product image"
  className="productImg "
  src="No image"
/>
`;
